# multi_array

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  new_for_each.hxx
external_projects/: CMakeLists.txt
include/multi_array/: accumulate.hxx  accumulators.hxx  bracket_op_dispatcher.hxx  for_each_impl.hxx  for_each_offset.hxx  for_each_offset_and_coordiante.hxx  functors.hxx  indexing_types.hxx  math.hxx  meta.hxx  misc.hxx  multi_array.hxx  multi_array_factories.hxx  navigator.hxx  numerics.hxx  operate.hxx  order.hxx  pre_exisiting_memory_poliy.hxx  runtime_check.hxx  shared_handle.hxx  view_expression.hxx
include/multi_array/detail/: for_each.hxx  operate_and_assign_helper.hxx  untracked_view_1d.hxx
include/multi_array/expr/: quaternary_expression.hxx  ternary_expression.hxx  view_expression.hxx
include/multi_array/meta/: promote_real.hxx  promote_type.hxx  variadic.hxx
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cxx  benchmark2.cxx  benchmark3.cxx  benchmark4.cxx  gbenchmark.cxx  marray_benchmark.hxx
src/new_benchmark/: CMakeLists.txt  main  main.cxx  runner.hxx  some_other.cxx  stuff.cxx  timer.hxx  victoria.hxx
src/tests/: CMakeLists.txt  broadcast.cxx  standalone.cxx  test_assigment.cxx  test_misc.cxx  test_navigator.cxx  test_operators.cxx  test_reshape.cxx  test_resize.cxx  test_smart_multi_array.cxx  test_view_expression.cxx
